--- a/config.toml
+++ b/config.toml
@@ -31,7 +31,7 @@ unsafe = true
 category = "categories"
 tag = "tags"
 author = "Shreya Gowri"
-
+Admin = "Shreya Gowri"
 ############################## navigation ###############################
 
 # main menu
