--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://shreyagowri.co.in/'
+baseURL = 'http://www.shreyagowri.co.in/'
 languageCode = 'en-us'
 title = 'I AM SHREYA'
 theme = 'twenty-twenty-hugo-master'
